# 3QTranslator

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  dailyWordBank.ts  language.test.ts  language.ts  mockData.test.ts  mockData.ts  types.ts
