[package]
name = "three_q_lang_helper"
version = "0.1.0"
description = "3Q语言助手"
authors = ["3Q Language Helper"]
edition = "2021"

[lib]
name = "three_q_lang_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
urlencoding = "2"
xcap = "0.0.10"
image = "0.25"
windows = { version = "0.58", features = ["Foundation", "Media_Ocr", "Graphics_Imaging", "Storage"] }
